--- a/static/icons/final/preview.html
+++ b/static/icons/final/preview.html
@@ -23,6 +23,7 @@
 
 		<h1>CUSTOM PREVIEW - you can change this in the previewTemplate option</h1>
 			<pre><code>.icon-close:</code></pre><div class="icon-close" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-corkscrew:</code></pre><div class="icon-corkscrew" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-i80:</code></pre><div class="icon-i80" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-logo-tab:</code></pre><div class="icon-logo-tab" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-logo:</code></pre><div class="icon-logo" style="width: 400px; height: 300px;" ></div><hr/>
