--- a/static/icons/final/preview.html
+++ b/static/icons/final/preview.html
@@ -33,6 +33,7 @@
 			<pre><code>.icon-social--twitter:</code></pre><div class="icon-social--twitter" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-tab:</code></pre><div class="icon-tab" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-taste-your-way:</code></pre><div class="icon-taste-your-way" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-underline:</code></pre><div class="icon-underline" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-wine-glass:</code></pre><div class="icon-wine-glass" style="width: 400px; height: 300px;" ></div><hr/>
 
 		<h2 id="embedded-svg-option">Embedded SVG option</h2>
