--- a/static/icons/final/preview.html
+++ b/static/icons/final/preview.html
@@ -29,6 +29,7 @@
 			<pre><code>.icon-logo-tab:</code></pre><div class="icon-logo-tab" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-logo:</code></pre><div class="icon-logo" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-social--facebook:</code></pre><div class="icon-social--facebook" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-social--instagram:</code></pre><div class="icon-social--instagram" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-social--search:</code></pre><div class="icon-social--search" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-social--twitter:</code></pre><div class="icon-social--twitter" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-tab:</code></pre><div class="icon-tab" style="width: 400px; height: 300px;" ></div><hr/>
