--- a/static/icons/final/preview.html
+++ b/static/icons/final/preview.html
@@ -22,6 +22,7 @@
 	<body>
 
 		<h1>CUSTOM PREVIEW - you can change this in the previewTemplate option</h1>
+			<pre><code>.icon-angle-down:</code></pre><div class="icon-angle-down" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-angle-right:</code></pre><div class="icon-angle-right" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-close:</code></pre><div class="icon-close" style="width: 400px; height: 300px;" ></div><hr/>
 			<pre><code>.icon-corkscrew:</code></pre><div class="icon-corkscrew" style="width: 400px; height: 300px;" ></div><hr/>
